# hello-django

./: pyproject.toml
hello_app/: views.py
hello_django/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
